--- a/index.html
+++ b/index.html
@@ -140,5 +140,14 @@
     
   </script>
   
+
+  <br>
+  <br>  
+  <br>
+  
+   <footer>
+    Designed & Developed by <strong> Shantanu Chaudhary.mi</strong>
+  </footer>
+  
 </body>
 </html>
