--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <br>
   
    <footer>
-    Designed & Developed by <strong> Shantanu Chaudhary.mi</strong>
+    Designed & Developed by <strong> Shantanu Chaudhary & MD Zakariya</strong>
   </footer>
   
 </body>
